--- a/src/preface.tex
+++ b/src/preface.tex
@@ -23,7 +23,7 @@ limitations to achieve their goals using as few computer cycles and as little
 computer memory and storage as possible. Modern computer games on the other hand are a layer cake
 of infinitely dense detail we couldn't possibly hope to capture in their totality
 in a single book. With something as small as Iridis Alpha on the other hand,
-which is just 59,000 bytes, we can 
+which is just 54,000 bytes, we can 
 understand its operation at the lowest level and set out the challenges and
 solutions involved in making a very fast game on slow hardware. The techniques and
 tricks we discover are as important today as they were in 1986.
@@ -44,22 +44,22 @@ Finally, this book cannot help being a very specific description of the way
 the Commodore 64 itself worked. The Commodore 64 was one of the most successful
 home microcomputers ever made. Along with the Apple II and the BBC Micro it was
 computing's first step into the home. Although they enabled new uses of computers,
-and the advent of video games in people's living rooms, these machines were still
+and marked the advent of video games in people's living rooms, these machines were still
 simple creatures. And because the Commodore 64 was such a basic computer
 in so many ways, what we end up learning about in this book is a recognisable implementation
 of a foundational concept in information theory:
 \href{https://en.wikipedia.org/wiki/Turing_machine}{\textcolor{blue}{the Turing Machine}}.
 64 kilobytes of integrated circuit memory is almost all the C64 has to play with: there is no hard 
-disk to speak of. So on our journey we find ourselves with a long Turing-style tape on which
+disk to speak of. So on our journey we find ourselves with a long Turing-style memory 'tape' on which
 our assembly language instructions operate, hopping back and forth along the 
 65,536 slots on the tape writing and reading values which the computer hardware
-translates into sound and vision. Understanding the code of a video game, it
-turns out, is a great way to introduce us to the practical details of
+translates into sound and vision. Understanding the code of a video game on an old computer, it
+turns out, is a great way to introduce ourselves to the practical details of
 computer science's first 'big idea'.
 
-On the other hand, if you are just curious about old computers or the detailed mechanics of how to make a
-glorified digital breadboard such as the C64 produce something on a screen\index{screen} that
-flashes, bleeps, and fascinates the viewer, then this book may also be for you. 
+On the other hand, maybe you are just curious. Maybe you just want to learn the detailed mechanics of how to make a
+glorified digital breadboard such as the Commodore 64 produce something on a screen\index{screen} that
+flashes, bleeps, and fascinates the viewer. If so, then this book was written for you. 
 
 \section*{Overview of the Chapters}
 Since the source code of Iridis Alpha is no longer available, I have had to
