--- a/src/titlescreen/tilesheets/charset_tilesheet_$0_bits.tex
+++ b/src/titlescreen/tilesheets/charset_tilesheet_$0_bits.tex
@@ -41,7 +41,7 @@
 	\fill[\CHARCOLOR] (6,0) rectangle ++ (1,1);
 	\fill[\CHARCOLOR] (7,0) rectangle ++ (1,1);
         \node[matrix of math nodes,anchor=south west,inner sep=0pt,
-        nodes={draw,minimum size=1cm,anchor=center},
+        nodes={draw,minimum size=1cm,anchor=center,font=\huge},
         column sep=-\pgflinewidth,row sep=-\pgflinewidth]
         {\icode{1} & \icode{1}  & \icode{1} & \icode{1} & \icode{1} & \icode{1} & \icode{1} & \icode{1}\\
         \icode{0} & \icode{0}  & \icode{0} & \icode{0} & \icode{0} & \icode{0} & \icode{0} & \icode{0}\\
@@ -54,6 +54,6 @@
 
           \end{tikzpicture}
         \end{adjustbox}
-      }\caption*{The stripe chracter}
+      }\caption*{The stripe character}
     \end{figure}
     
