--- a/src/binary.tex
+++ b/src/binary.tex
@@ -37,7 +37,7 @@ programmers and an efficient way of directing the computer to make effective
 use of the amorphous binary goo fed into it.
 
 Trial and error has eventually arrived at an optimal arrangement, one which
-you have definitely heard of: this is the \icode{byte}. The idea of the byte
+you have definitely heard of: this is the \icode{byte}. The idea of the \icode{byte}
 is simply to divide and conquer. We take any string of 1s and 0s and split
 them up into segments of eight. We now consider ourselves to have a string
 of bytes and we call each of the individual 1s and 0s \icode{bits}. 
@@ -153,7 +153,7 @@ sequence\index{sequence} of 8 bits with just two characters.
         \bottomrule
       \end{tabular}
     \end{adjustbox}
-  }\caption*{The 256 different permutations of eight 0s and 1s.}
+  }\caption*{The 256 different permutations of eight 0s and 1s, with a gap in the middle for reasons of space.}
 \end{figure}
 
 But that is not its only benefit. When we look at any specific number
@@ -163,7 +163,7 @@ are set, without needing to memorize all 256 possible permutations.
 This is possible because we can start by looking at either character\index{character}
 in the two-character\index{character} notation and quickly divine the 1s and 0s that
 make it up. We can do this because each character\index{character} represents a value
-between 0 and 15 that is made is up of some combination of 8, 4, 2, and
+between 0 and 15 that is made up of some combination of 8, 4, 2, and
 1 - each representing a bit from left to right.
 
 \begin{figure}[H]
@@ -179,9 +179,18 @@ between 0 and 15 that is made is up of some combination of 8, 4, 2, and
         \icode{0} & \icode{0} & \icode{0} & \icode{0} & 0 & \icode{0}  \\
         \icode{0} & \icode{0} & \icode{0} & \icode{1} & 1 & \icode{1}  \\
         \icode{0} & \icode{0} & \icode{1} & \icode{0} & 2 & \icode{2}  \\
-        . & . & . & .  \\
-        \icode{1} & \icode{1} & \icode{0} & \icode{1} & 13 & \icode{E}  \\
-        \icode{0} & \icode{1} & \icode{1} & \icode{0} & 14 & \icode{D}  \\
+        \icode{0} & \icode{0} & \icode{1} & \icode{1} & 3 & \icode{3}  \\
+        \icode{0} & \icode{1} & \icode{0} & \icode{0} & 4 & \icode{4}  \\
+        \icode{0} & \icode{1} & \icode{0} & \icode{1} & 5 & \icode{5}  \\
+        \icode{0} & \icode{1} & \icode{1} & \icode{0} & 6 & \icode{6}  \\
+        \icode{0} & \icode{1} & \icode{1} & \icode{1} & 7 & \icode{7}  \\
+        \icode{1} & \icode{0} & \icode{0} & \icode{0} & 8 & \icode{8}  \\
+        \icode{1} & \icode{0} & \icode{0} & \icode{1} & 9 & \icode{9}  \\
+        \icode{1} & \icode{0} & \icode{1} & \icode{0} & 10 & \icode{A}  \\
+        \icode{1} & \icode{0} & \icode{1} & \icode{1} & 11 & \icode{B}  \\
+        \icode{1} & \icode{1} & \icode{0} & \icode{0} & 12 & \icode{C}  \\
+        \icode{1} & \icode{1} & \icode{0} & \icode{1} & 13 & \icode{D}  \\
+        \icode{1} & \icode{1} & \icode{1} & \icode{0} & 14 & \icode{E}  \\
         \icode{1} & \icode{1} & \icode{1} & \icode{1} & 15 & \icode{F}  \\
         \addlinespace
         \bottomrule
@@ -272,7 +281,7 @@ like \icode{01011010} which is \icode{5A} in hexadecimal.
 
 Since we only want a value between 0 and 3 we can
 extract out just the last two bits to give us that number. In other words, if we 
-set all the other bits to zero but that last two we would have a number between 0 and 3:
+set all the bits to zero except the last two we would have a number between 0 and 3:
 
 \begin{figure}[H]
   {
@@ -292,8 +301,8 @@ set all the other bits to zero but that last two we would have a number between 
 \end{figure}
 
 We can ask the
-computer to do this us by asking it to compare \icode{01011010} with \icode{00000011}
-and give use as a result all the bits where both are 1.
+computer to do this for us by asking it to compare \icode{01011010} with \icode{00000011}
+and give us a result where all the bits in both are 1.
 
 \begin{figure}[H]
   {
@@ -313,21 +322,21 @@ and give use as a result all the bits where both are 1.
         \bottomrule
       \end{tabular}
     \end{adjustbox}
-  }\caption*{AND'ing \icode{\$5A} and \icode{\$03} gives \icode{\$01} (1). For \icode{AND} to give a 1 both bits must 1 or both must be 0.}
+  }\caption*{AND'ing \icode{\$5A} and \icode{\$03} gives \icode{\$01} (1). For \icode{AND} to give a 1 both bits must be \icode{1}.}
 \end{figure}
 
 
 Notice that in this new bit string we've set the bits that we're interested in
 to \icode{1}.  This is called an \icode{AND} operation. We have used
 \icode{00000011} to mask out the bits we're not interested in and hence turn a
-random number between 0 and 255 into a random number between 0 and 3.
+random number between 0 and 255 into a random number between 0 and 3, in this case: 2.
 
 Our choice of 8 as a magic number becomes slightly less magical when we realize
 that we never had all possible numbers to choose from in the first place. Sure
 we could have chosen 7 or 9 or 13 but how practical would this really be when
 the actual value assigned to any individual bit is always going to be a power of
 2. Even if we could never precisely intuit the reasons as to why, a magic number
-that is also the power of 2, e.g. 8, 4, 16, 64... is always going to make things easier
+that is also the power of 2 (e.g. 8, 4, 16, 64) is always going to make things easier
 over the long haul even if we can't articulate them.
 
 So now some jargon we might have heard in the past is starting to make sense. The
